--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsx script/build.ts",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push"
+    "db:push": "drizzle-kit push",
+    "export:blog": "tsx scripts/export-blog-json.ts"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
