--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsx script/build.ts",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
-    "db:push": "drizzle-kit push",
-    "export:blog": "tsx scripts/export-blog-json.ts"
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "cross-env": "^7.0.3",
